Some modification and JavaScript add

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
                 
                 <div class="filled input">
                     <lable>Passeord</lable>
-                    <input type="text" name="password" placeholder="Enter new password">
+                    <input type="password" name="password" placeholder="Enter new password">
                     <i class="fa-solid fa-eye"></i>
 
                 </div>
@@ -65,5 +65,7 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
         </div>
       </div>   
  </div> 
+
+ <script src="/javaScript/passwordHS.js"></script>
 </body>
 </html>
