--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
                 
                 <div class="filled input">
                     <lable>Passeord</lable>
-                    <input type="text" name="password" placeholder="Enter your password">
+                    <input type="password" name="password" placeholder="Enter your password">
                     <i class="fa-solid fa-eye"></i>
                 </div>
                 
@@ -52,5 +52,7 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
         </div>
       </div>   
  </div> 
+
+ <script src="/javaScript/passwordHS.js"></script>
 </body>
 </html>
