--- a/user.html
+++ b/user.html
@@ -42,7 +42,7 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
             <div class="search">
                 <span class="text">Select an user to start chat</span>
                 <input type="text" placeholder="Enter name to search...">
-                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="n_1"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
             <div class="users-list">
                 <a href="#">
@@ -110,5 +110,6 @@ href="/css/app-wa-4605c815f1874757bc9ac33aa114fb0f.css?vsn=d">
         </div>
       </div>   
  </div> 
+ <script src="/javaScript/user.js"></script>
 </body>
 </html>
